--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ AWS_ACCESS_KEY_ID=AKIAS2VS4KNE5MUWATLD
 AWS_SECRET_ACCESS_KEY=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
 AWS_REGION=eu-north-1 
 AWS_BUCKET_NAME=media-converter-gumbo
+
+MONGODB_URI=mongodb+srv://pritam:01230123@testing-cluster.ciqiy.mongodb.net/media-converter?retryWrites=true&w=majority
